# SillyHub

./: .gitattributes  .gitignore  .sillyspec-baseline-unstaged.patch  .sillyspec-platform-cleaned  AGENTS.md  CLAUDE.md  COMPLETE.md  Makefile  README.md  ROADMAP.md  TASK-TRACKER.md  TASKS.md  gate-status.json  meta.json  package-lock.json  package.json  tmp_ch.json
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sillyspec-platform-cleaned  CLAUDE.md  Dockerfile  README.md  alembic.ini  conftest.py  create_tables.py  docker-entrypoint.sh  openapi.json  pyproject.toml  ruff.toml  seed_workbench_demo.py  test_alembic.db
backend/.sillyspec/: local.yaml
backend/.sillyspec/.runtime/: global.json  sillyspec.db  user-inputs.md
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  audit_hooks.py  auth_deps.py  config.py  crypto.py  db.py  errors.py  layout_migration.py  logging.py  paths.py  permission_cache.py  redis.py  security.py  spec_paths.py  telemetry.py
backend/app/models/: __init__.py  base.py
backend/app/modules/: __init__.py
backend/hooks/: scan_write_guard.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 1e69522e288c_merge_orchestration_and_ppm_heads.py  202605251400_create_health_probe.py  202605260900_create_workspaces.py  202605261000_workspaces_partial_unique.py  202605270900_create_components_and_relations.py  202605280900_create_auth_and_rbac.py  202605290900_create_scan_documents.py  202605300900_create_changes.py  202605301700_add_word_count_to_change_documents.py  202605310900_create_tasks.py  202605311700_add_change_approval_fields.py  202606010900_create_git_identities.py  202606020900_create_worktree_leases.py  202606030900_create_git_operation_logs.py  202606040900_create_workflow.py  202606050900_create_agent_runs.py  202606060900_create_tool_operation_logs.py  202606070900_create_releases.py  202606080900_create_incidents.py  202606090900_create_platform_settings.py  202606100900_create_spec_workspaces.py  202606101000_create_spec_profile.py  202606110900_add_agent_run_audit_fields.py  202606120900_agent_runs_nullable_task_lease.py  202606130900_workspace_graph.py  202606140900_create_missing_tables.py  202606150900_add_execution_coordinator_fields.py  202606160900_add_tool_policies.py  202606161200_create_admin_org_role.py  202606170900_add_change_workflow_fields.py  202606170900_rename_system_roles_to_zh.py  202606180900_add_change_id_to_agent_runs.py  202606190900_unify_workflow_stages.py  202606200900_created_to_draft.py  202606210900_scan_docs_path_index.py  202606220900_add_change_human_gate.py  (+78 more)
backend/scripts/: cleanup_daemon_instances.py  dump_openapi.py  fix_unused_ignores.py  migrate_from_ruoyi.py  resync_modules.py  resync_ps_project_plan.py
backend/templates/: weekly-plan-template.xlsx
backend/tests/: test_config.py  test_daemon_dist.py  test_gate_e2e.py  test_health.py  test_session_zombie_migration.py
sillyhub-daemon/: .dockerignore  .gitattributes  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts  vitest.spikes.config.ts
sillyhub-daemon/scripts/: build-bundle.sh  gen-api-types.mjs  install.ps1  install.sh
sillyhub-daemon/sillyhub_daemon/: __init__.py  __main__.py  agent_detector.py  client.py  config.py  credential.py  daemon.py  protocol.py  task_runner.py  version.py  workspace.py
sillyhub-daemon/src/: agent-detector.ts  build-id.ts  cli.ts  cmd-shim.ts  config.ts  credential.ts  cursor-version.ts  daemon-version.ts  daemon.ts  file-rpc.ts  host-fs-handler.ts  hub-client.ts  index.ts  mcp-config.ts  mcp-server.ts  permission-rules.ts  preflight.ts  protocol.ts  roots-rpc.ts  runtime-lock.ts  skill-manager.ts  spawn-env.ts  spec-sync.ts  task-runner.ts  terminal-launcher.ts  terminal-observer.ts  tool-kind.ts  types.ts  version.ts  workspace.ts  ws-client.ts
sillyhub-daemon/tests/: _sanity.test.ts  agent-detector.system-claude.integ.test.ts  agent-detector.test.ts  cache-passthrough.test.ts  cli-session-manager-injection.test.ts  cli.test.ts  cmd-shim.test.ts  config-server-isolation.test.ts  config.test.ts  credential.test.ts  cursor-version.test.ts  daemon-interactive-bridge.test.ts  daemon-interactive-codex.test.ts  daemon-kind-dispatch.test.ts  daemon-multi-runtime.test.ts  daemon-parity.test.ts  daemon-session-lifecycle-wiring.test.ts  daemon-session-resume-route.test.ts  daemon-spec-root-map.test.ts  daemon-sync-allowed-roots-per-runtime.test.ts  daemon.test.ts  diff-truncate.test.ts  execution-context.test.ts  file-rpc.test.ts  helpers.ts  host-fs-handler-worktree.test.ts  host-fs-handler.test.ts  hub-client.test.ts  mcp-config.test.ts  mcp-server.test.ts  permission-rules-temp-paths.test.ts  permission-rules.test.ts  preflight.test.ts  protocol-session-contract.test.ts  protocol.contract.test.ts  roots-rpc.test.ts  runtime-lock.test.ts  skill-manager.test.ts  spawn-env.test.ts  spec-sync.test.ts  (+43 more)
(+3899 files in other folders)
