[project]
name = "multi-agent-platform-api"
version = "0.1.0"
description = "Multi-Agent Collaboration Platform — Backend API (FastAPI)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlmodel>=0.0.22",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "structlog>=24.4",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "pynacl>=1.5",
  "httpx>=0.27",
  "python-frontmatter>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-passlib",
  "anyio>=4",
  "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
# Discover both the top-level integration suite and module-local unit tests.
testpaths = ["tests", "app"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF", "BLE"]
# E501: line length is enforced by the formatter.
# N818: domain exceptions are named after the event (e.g. ``WorkspaceNotFound``)
#       not the suffix; the abstract ``AppError`` base still ends in "Error".
ignore = ["E501", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]
"migrations/versions/*" = ["UP035"]  # alembic uses `typing.Sequence` in its template

[tool.ruff.format]
quote-style = "double"
