[project]
name = "sillyhub-daemon"
version = "0.1.0"
description = "SillyHub local daemon for task execution"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "click>=8.0",
]

[project.scripts]
sillyhub-daemon = "sillyhub_daemon.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
